modified index page

--- a/templates/index.html.twig
+++ b/templates/index.html.twig
@@ -1,5 +1,5 @@
 <div class="user_post_wrapper_bg">
-        <!--carousel section-->
+        <!--carousel section 1-->
         <section>
             <div class="index_page_banner_ads_outter_bg">
                 <div class="index_page_banner_ads_inner_bg">
